fix smoth scrollbar

--- a/source/sass/pages/main/geography-style.scss
+++ b/source/sass/pages/main/geography-style.scss
@@ -330,7 +330,9 @@
     height: 100%;
     /*height: 501px;*/
     /*height: 258px;*/
-    /*z-index: 10;*/
+	/*z-index: 10;*/
+	
+	will-change: transform;
     background: url(../img/geography/bg-nuage-1.png) repeat-x;
     -webkit-transition: opacity .8s cubic-bezier(.25,.46,.45,.94);
     -o-transition: opacity .8s cubic-bezier(.25,.46,.45,.94);
@@ -342,7 +344,7 @@
 }
 .section-geography__map-planet:before {
 
-
+	will-change: transform;
     position: absolute;
     display: block;
     content: "";
