--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -223,3 +223,9 @@ figure{
 	height: 100%;
 }
 
+.swiper-wrapper{
+	will-change: transform;
+}
+.swiper-slide{
+	will-change: transform, opacity;
+}
